# engram

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: locomo_bench.py  longmemeval_bench.py
docs/: CNAME  index.html
engram/: __init__.py  cli.py  config.py  mcp_server.py  server.py
engram/backends/: base.py  faiss_backend.py  qdrant_backend.py
engram/ingestion/: parser.py
engram/retrieval/: embedder.py  pipeline.py  sparse.py
examples/: 01_getting_started.ipynb  02_customer_support.ipynb  03_personal_assistant.ipynb
tests/: test_faiss_backend.py  test_parser.py  test_pipeline.py  test_sparse.py
